<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vandy Vans</string>
    <string name="action_settings">Settings</string>
    
    <string name="blank">lorem</string>
    
    <string name="map_label">Map</string>
    <string name="stops_label">Stops</string>
    <string name="route_blue">Blue</string>
    <string name="route_red">Red</string>
    <string name="route_green">Green</string>
    <string name="arrivaltime_failure">Sorry, we could not get the Vandy Van arrival times for this stop right now.</string>

    <string name="reminders_label">Reminders</string>
    <string name="reminders_explanation">Turn on reminders to be alerted when the next van is close-by. These will be turned off automatically after you get the reminder.</string>
    
    <string name="about">About</string>
    <string name="report_bug">Report a Bug</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="location_setting">Location Settings</string>
    <string name="notification_setting">Notification Settings</string>
    <string name="attribution">Attributions</string>
    <string name="source_code">Source Code</string>

    <string name="email_hint">your email address</string>
    <string name="bugreport_hint">describe the bug</string>
    <string name="feedback_hint">feedback about the application</string>
    <string name="submit">Submit</string>
    
    <string name="created_by">CREATED BY:</string>
    <string name="graphics_design">GRAPHIC DESIGN BY:</string>
    <string name="creator">Athran Rahman</string>
    <string name="designer">Fletcher Young</string>

    <string name="sourcecode_statement">VandyApps is a free open-source software under the Batman license. The source code is available at:</string>
    <string name="sourcecode_link">https://github.com/VandyApps/vandyvans-android</string>
    <string name="sourcecode_open_in_browser">Open in browser</string>
    <string name="sourcecode_emaillink">Email link</string>

</resources>
