<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:alpha="0.9"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="8dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_bug" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp">

            <!-- Separator -->
        </View>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_feedback" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:visibility="gone">

            <!-- Separator -->
        </View>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_setting"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:visibility="gone">

            <!-- Separator -->
        </View>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_setting"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:visibility="gone">

            <!-- Separator -->
        </View>

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attribution"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp">

            <!-- Separator -->
        </View>

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/source_code" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            style="@style/about_credits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/created_by" />

        <TextView
            style="@style/about_credits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creator"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp">

            <!-- Separator -->
        </View>

        <TextView
            android:id="@+id/textView2"
            style="@style/about_credits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/graphics_design" />

        <TextView
            style="@style/about_credits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/designer"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>